<?xml version="1.0"?>

<package format="2">

    <name>beginner_filter</name>

    <version>1.0.0</version>

    <description>This is package of particle filter</description>

    <maintainer email="supasan.k@ku.th">K.Supasan</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>message_runtime</exec_depend>

    <build_depend>rospy</build_depend>
    <exec_depend>rospy</exec_depend>

    <build_depend>sensor_msgs</build_depend>
    <exec_depend>sensor_msgs</exec_depend>

    <build_depend>geometry_msgs</build_depend>
    <exec_depend>geometry_msgs</exec_depend>

</package>
